Ajustes no modulo 1

--- a/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.2.html
+++ b/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Estilos externos</title>
-    <link rel="stylesheet" href="/HTML/Exercicios/CSS/estruturacss/style001.css">
+    <link rel="stylesheet" href="/Modulo1/HTML/Exercicios/CSS/estruturacss/style001.css">
     <!-- pode ser utilizado css extra <link rel="stylesheet" href="extra.css"> -->
 </head>
 <body>
-    <p><a href="/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
+    <p><a href="/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
     <h1>Segunda página utilizando css separado</h1>
     <hr>
 
