--- a/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.html
+++ b/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Estilos inline</title>
 </head>
 <body>
     
     <p style="color: white;"><a href="/HTML/index.html" rel="prev">
-        <a href="/HTML/index.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a>
-        <a href="/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html" target="_self" rel="next"><img src="/Imagens/Utils/avancar.webp" width="30" style="" alt="Botão de voltar"></a>
+        <a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a>
+        <a href="/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html" target="_self" rel="next"><img src="/Modulo1/Imagens/Utils/avancar.webp" width="30" style="" alt="Botão de voltar"></a>
     </p>
     <h1 >css inline</h1>
     <hr>
