--- a/Modulo1/HTML/Exercicios/Desafios/desafio001.html
+++ b/Modulo1/HTML/Exercicios/Desafios/desafio001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Desafio001</title>
     <style>
         body{
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Neste desafio acabei utilizando CENTER poís no momento apenas estavamos mexendo utilizando HTML puro. -->
-    <p style="color: white;"><a href="/HTML/index.html" rel="prev"><img src="/Imagens/desafio001/voltar.webp" width="30" alt="Botão de voltar"></a></p>
+    <p style="color: white;"><a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/desafio001/voltar.webp" width="30" alt="Botão de voltar"></a></p>
     <center>
         <h1 style="color: white;">Desafio 1</h1>
     </center>
@@ -21,11 +21,11 @@
 
     <center>
     <h2 style="color: white;">Videos relxantes</h2>
-    <a href="TelaExtraDesafio/telavideodesafio001.html?video=netherlands360" target="_self" rel="next"><img src="/Imagens/desafio001/netherlands360.png" alt="Campo"></a>
-    <a href="TelaExtraDesafio/telavideodesafio001.html?video=alps360" target="_self" rel="next"><img src="/Imagens/desafio001/alps360.png" alt="Campo"></a>
+    <a href="TelaExtraDesafio/telavideodesafio001.html?video=netherlands360" target="_self" rel="next"><img src="/Modulo1/Imagens/desafio001/netherlands360.png" alt="Campo"></a>
+    <a href="TelaExtraDesafio/telavideodesafio001.html?video=alps360" target="_self" rel="next"><img src="/Modulo1/Imagens/desafio001/alps360.png" alt="Campo"></a>
     <br>
-    <a href="TelaExtraDesafio/telavideodesafio001.html?video=switzerland360" target="_self" rel="next"><img src="/Imagens/desafio001/switzerland360.png" alt="Campo"></a>
-    <a href="TelaExtraDesafio/telavideodesafio001.html?video=wonders360" target="_self" rel="next"><img src="/Imagens/desafio001/wonders360.png" alt="Campo"></a>
+    <a href="TelaExtraDesafio/telavideodesafio001.html?video=switzerland360" target="_self" rel="next"><img src="/Modulo1/Imagens/desafio001/switzerland360.png" alt="Campo"></a>
+    <a href="TelaExtraDesafio/telavideodesafio001.html?video=wonders360" target="_self" rel="next"><img src="/Modulo1/Imagens/desafio001/wonders360.png" alt="Campo"></a>
     </center>
 
 </body>
