--- a/Modulo1/HTML/Exercicios/HTML/CodigosUsados.html
+++ b/Modulo1/HTML/Exercicios/HTML/CodigosUsados.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Tags</title>
 </head>
 <body>
-    <p><a href="/HTML/index.html" rel="prev">Voltar</a></p>
+    <p><a href="/Modulo1/HTML/index.html" rel="prev">Voltar</a></p>
     <hr>
     <h1>Tipos de Tags em HTML5</h1>
     <ol type="i">
