--- a/Modulo1/HTML/Exercicios/HTML/Ex003.html
+++ b/Modulo1/HTML/Exercicios/HTML/Ex003.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Formato de imagem</title>
 </head>
 <body>
-    <p><a href="/HTML/index.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
+    <p><a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
     <hr>
     <!-- Exercicio 3 - formato de imagens-->
     <h1>Ex003</h1>
-    <img src="/Imagens/Editadas/html127.png" alt="Logo HTML5">
-    <img src="/Imagens/Editadas/css127.png" alt="Logo CSS3">
-    <img src="/Imagens/Editadas/javascript127.png" alt="Logo JavaScript">
+    <img src="/Modulo1/Imagens/Editadas/html127.png" alt="Logo HTML5">
+    <img src="/Modulo1/Imagens/Editadas/css127.png" alt="Logo CSS3">
+    <img src="/Modulo1/Imagens/Editadas/javascript127.png" alt="Logo JavaScript">
         <p>Pode ser carregado imagem externa</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/220px-GitHub_Invertocat_Logo.svg.png" alt="Logo github">      
 </body>
