--- a/Modulo1/HTML/index.html
+++ b/Modulo1/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Exercicio 4 - colocando icone no favicon -->
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
 
     <title>Meu primeiro site</title>
 
@@ -16,13 +16,13 @@
         pretendo utilizar CSS e Javascript ao decorrer do desenvolvimento do site. <br>
         Estou em busca de aprender como funciona o desenvolvimento web, anteriormente trabalhei por quase 3 anos com desenvolvimento desktop utilizando a ferramenta/linguagem <strong>Delphi</strong>
         <br>
-        <p><img src="/Imagens/Editadas/eu400.jpg" alt="Foto de como eu sou."></p>
+        <p><img src="/Modulo1/Imagens/Editadas/eu400.jpg" alt="Foto de como eu sou."></p>
     </p>
     <h2>Acesso a minhas redes.</h2>
     <ul>
-        <p><img src="/Imagens/Editadas/git24.png" alt="Logo do Github">/<a href="https://github.com/AugustoZG" target="_blank" rel="external"> GitHub</a> - Acesse meu repositório público no Github.</p>
-        <p><img src="/Imagens/Editadas/linkedin24.png" alt="Logo do Github">/<a href="https://www.linkedin.com/in/gabriel-augusto-zimmermann-677136251/" target="_blank" rel="external"> Linkedin</a> - Acesse meu perfil do Linkedin</p>
-        <p><img src="/Imagens/Editadas/instagram24.png" alt="Logo do Instagram">/<a href="https://github.com/AugustoZG" target="_blank" rel="external"> Instagram</a> - Acesse meu perfil no Instragram.</p>
+        <p><img src="/Modulo1/Imagens/Editadas/git24.png" alt="Logo do Github">/<a href="https://github.com/AugustoZG" target="_blank" rel="external"> GitHub</a> - Acesse meu repositório público no Github.</p>
+        <p><img src="/Modulo1/Imagens/Editadas/linkedin24.png" alt="Logo do Github">/<a href="https://www.linkedin.com/in/gabriel-augusto-zimmermann-677136251/" target="_blank" rel="external"> Linkedin</a> - Acesse meu perfil do Linkedin</p>
+        <p><img src="/Modulo1/Imagens/Editadas/instagram24.png" alt="Logo do Instagram">/<a href="https://github.com/AugustoZG" target="_blank" rel="external"> Instagram</a> - Acesse meu perfil no Instragram.</p>
     </ul>
 
         <!-- <p>Link de marca patrocinada exemplo de uso <code>rel="nofollow"</code> <a href="https://www.google.com" target="_blank" rel="nofollow">Google</a></p> -->
