--- a/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html
+++ b/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Estilos na página</title>
-    <link rel="stylesheet" href="/HTML/Exercicios/CSS/estruturacss/style001.css">
+    <link rel="stylesheet" href="/Modulo1/HTML/Exercicios/CSS/estruturacss/style001.css">
     <style>
         /* podemos utilizar esta forma caso queira mudar a cor em um tela especifica */
         h1{
@@ -17,8 +17,8 @@
 <body>
     
     <p>
-        <a href="/HTML/Exercicios/CSS/exercicioscss/exercicio001.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a>
-        <a href="/HTML/Exercicios/CSS/exercicioscss/exercicio001.2.html" target="_self" rel="next"><img src="/Imagens/Utils/avancar.webp" width="30" alt="Botão de voltar"></a>
+        <a href="/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a>
+        <a href="/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.2.html" target="_self" rel="next"><img src="/Modulo1/Imagens/Utils/avancar.webp" width="30" alt="Botão de voltar"></a>
     </p>
     <h1>Primeira página utilizando css separado</h1>
     <hr>
