--- a/Modulo1/HTML/Exercicios/HTML/Ex006.html
+++ b/Modulo1/HTML/Exercicios/HTML/Ex006.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>semântica</title>
 </head>
 <body>
-    <p><a href="/HTML/index.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
+    <p><a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
     <hr>
     <!-- Exercicio 6 - semântica 
      https://www.w3.org/TR/2014/REC-html5-20141028/obsolete.html
