--- a/Modulo1/HTML/Exercicios/HTML/Ex007.html
+++ b/Modulo1/HTML/Exercicios/HTML/Ex007.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Formatações</title>
     <!-- 
      Podemos utilizar esta forma caso queira mudar a cor de todos os marcadores sem necessitar de ficar abrindo a tag style em cada um.
@@ -14,7 +14,7 @@
     </style> -->    
 </head>
 <body>
-    <p><a href="/HTML/index.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
+    <p><a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
     <hr>
     <!-- Exercicio 7 - Formatações -->
     <h1>Principais formatações</h1>
