--- a/Modulo1/HTML/Exercicios/HTML/Ex010.html
+++ b/Modulo1/HTML/Exercicios/HTML/Ex010.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
     <title>Downloads</title>
 </head>
 <body>
-    <p><a href="/HTML/index.html" rel="prev"><img src="/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
+    <p><a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a></p>
     <hr>    
     <!-- Exercicio 10 - Link para download -->
      <h1>Download para testes</h1>
      <ul>
-        <li><a href="/Livro/HTML.pdf" download="HTML.pdf" type="application/pdf">Baixar livro HTML PDF</a></li>
-        <li><a href="/Livro/HTML.zip" download="HTML.zip" type="application/zip">Baixar livro HTML compactado ZIP</a></li>
+        <li><a href="/Modulo1/Livro/HTML.pdf" download="HTML.pdf" type="application/pdf">Baixar livro HTML PDF</a></li>
+        <li><a href="/Modulo1/Livro/HTML.zip" download="HTML.zip" type="application/zip">Baixar livro HTML compactado ZIP</a></li>
      </ul>
     
 </body>
