--- a/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.html
+++ b/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.html
@@ -10,7 +10,7 @@
     
     <p style="color: white;"><a href="/HTML/index.html" rel="prev">
         <a href="/Modulo1/HTML/index.html" rel="prev"><img src="/Modulo1/Imagens/Utils/voltar.webp" width="30" alt="Botão de voltar"></a>
-        <a href="/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html" target="_self" rel="next"><img src="/Modulo1/Imagens/Utils/avancar.webp" width="30" style="" alt="Botão de voltar"></a>
+        <a href="/Modulo1/HTML/Exercicios/CSS/exercicioscss/exercicio001.1.html" target="_self" rel="next"><img src="/Modulo1/Imagens/Utils/avancar.webp" width="30" alt="Botão de voltar"></a>
     </p>
     <h1 >css inline</h1>
     <hr>
