--- a/Modulo2/HTML/html002.html
+++ b/Modulo2/HTML/html002.html
@@ -4,21 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/Modulo1/Imagens/Editadas/moon16.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/Modulo2/CSS/css002.css">
     <title>Gradiente</title>
-    <style>
-        *{
-            height: 100%;
-        }
-        h1{
-            text-align: center;
-        }
-        body{
-            /* background-image: linear-gradient(to right, #034159, #025951, #02735E, #038C3E, #0CF25D);
-            background-image: linear-gradient(45deg, #034159, #025951, #02735E, #038C3E, #0CF25D); */
-            background-image: radial-gradient(circle, #034159, #025951, #02735E, #038C3E, #0CF25D);
-            background-attachment: fixed;
-        }
-    </style>
 </head>
 <body>
     <div style="display: flex;">
