--- a/Modulo2/index.html
+++ b/Modulo2/index.html
@@ -13,11 +13,16 @@
         
         <h2>Aprendizado em CSS - Exercicios</h2>
         <ul>
-            <li><a href="HTML/html001.html" target="_self" rel="next">html001 - Cores</a></li>
-            <li><a href="HTML/html002.html" target="_self" rel="next">html002 - Gradiente</a></li>
-            <li><a href="HTML/html003.html" target="_self" rel="next">html003 - Utilizando o Gradiente</a></li>
-            <li><a href="HTML/html004.html" target="_self" rel="next">html004 - Fontes</a></li>
-            <li><a href="HTML/html005.html" target="_self" rel="next">html005 - Fontes com o Google</a></li>
+            <li><a href="HTML/html001.html" target="_self" rel="next">Atividade001 - Cores</a></li>
+            <li><a href="HTML/html002.html" target="_self" rel="next">Atividade002 - Gradiente</a></li>
+            <li><a href="HTML/html003.html" target="_self" rel="next">Atividade003 - Utilizando o Gradiente</a></li>
+            <li><a href="HTML/html004.html" target="_self" rel="next">Atividade004 - Fontes</a></li>
+            <li><a href="HTML/html005.html" target="_self" rel="next">Atividade005 - Fontes com o Google</a></li>
+            <li><a href="HTML/html006.html" target="_self" rel="next">Atividade006 - Alinhamento de texto</a></li>
+            <li><a href="HTML/html007.html" target="_self" rel="next">Atividade007 - Seletores personalizados</a></li>
+            <li><a href="HTML/html008.html" target="_self" rel="next">Atividade008 - Pseudo-classes</a></li>
+            <li><a href="HTML/html009.html" target="_self" rel="next">Atividade009 - Personalizando links</a></li>
+            <li><a href="HTML/html010.html" target="_self" rel="next">Atividade010 - Exemplos de Caixas</a></li>
         </ul>
         
     </main>
