Uma parte do desafio feita

--- a/Modulo2/index.html
+++ b/Modulo2/index.html
@@ -23,6 +23,12 @@
             <li><a href="HTML/html008.html" target="_self" rel="next">Atividade008 - Pseudo-classes</a></li>
             <li><a href="HTML/html009.html" target="_self" rel="next">Atividade009 - Personalizando links</a></li>
             <li><a href="HTML/html010.html" target="_self" rel="next">Atividade010 - Exemplos de Caixas</a></li>
+            <li><a href="HTML/html011.html" target="_self" rel="next">Atividade011 - Grouping Tags</a></li>
+        </ul>
+
+        <h2>Desafio</h2>
+        <ul>
+            <li><a href="HTML/desafio/desafio001.html" target="_self" rel="next">Desafio 01 - Site</a></li>
         </ul>
         
     </main>
